# mentorship

./: .gitignore  README.md  pyproject.toml
airflow/: .env.example  docker-compose.yaml
airflow/dags/: load_datalake.py
airflow_code/dags/: global_constants.py
airflow_code/dags/datalake/: constants.py  load_ny_taxi_datalake.py  load_ny_taxi_zones.py
airflow_code/dags/raw_dwh_layer/: load_dwh_raw.py  load_ny_taxi_dictionaries_dwh_raw.py  load_ny_taxi_dwh_raw.py  load_ny_taxi_zones_dwh_raw.py
dbt/mentorship/: dbt_project.yml  package-lock.yml  packages.yml
dbt/mentorship/seeds/: green_ny_taxi_trip_types.csv  payment_types.csv  rate_codes.csv  seeds.yml
docker_training/: Dockerfile  README.md  compose.yaml  ingest_data.py  pipeline.py  run_pgcli.sh
infrastructure/: README.md  main.tf  outputs.tf  providers.tf  terraform.tfvars.example
infrastructure/modules/app_server/: main.tf  variables.tf
infrastructure/modules/datalake/: main.tf  variables.tf
snowflake_sql/access_control/: etl_role.sql  etl_role_users.sql
snowflake_sql/databases/: mentorship_db.sql
snowflake_sql/file_formats/: ff_ny_taxi_parquet.sql  ff_ny_taxi_zones_csv.sql
snowflake_sql/schemas/: external_stages.sql  raw.sql
snowflake_sql/stages/: stg_ny_taxi_fhv.sql  stg_ny_taxi_green.sql  stg_ny_taxi_green_trip_types.sql  stg_ny_taxi_payment_types.sql  stg_ny_taxi_rate_codes.sql  stg_ny_taxi_vendors.sql  stg_ny_taxi_yellow.sql  stg_ny_taxi_zones.sql
snowflake_sql/storage_integrations/: mentorship_datalake.sql
snowflake_sql/warehouses/: mentorship_dwh.sql
(+56 files in other folders)
