[tool.poetry]
name = "mentorship"
version = "0.1.0"
description = ""
authors = ["Yauheni Khvainitski <euheniy.khvoinitski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pgcli = "^4.0.1"
jupyter = "^1.0.0"
pandas = "^2.1.2"
pyarrow = "^14.0.0"
sqlalchemy = "^2.0.23"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
