[tool.poetry]
name = "mentorship"
version = "0.1.0"
description = ""
authors = ["Yauheni Khvainitski <euheniy.khvoinitski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pandas = "2.0"
pyarrow = "^14.0.1"
apache-airflow = "2.7.3"
pgcli = "^4.0.1"
jupyter = "^1.0.0"
sqlalchemy = ">=1.4.28,<2.0"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.0"
apache-airflow-providers-amazon = "^8.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
